src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_12.deca
// Description:
//    regle 3.12, opération partielle
//
// Resultats:
//    Ligne 7: Parameter 'x' already exists.
class A {
    void f(int x, float x) {
    }
}